fix gap and under catch redirection

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -11,7 +11,9 @@ body {
 .swal-footer {
   text-align: center;
 }
-
+.\lk-prejoin{
+  height: auto !important;
+}
 @media screen and (max-width: 760px) {
   .\lk-control-bar {
     .\lk-button,
